# PetChat

./: .gitignore  CLAUDE.md  README.md  package.json  pipeline-manifest.json  pnpm-lock.yaml
.github/workflows/: xinxin-v2.1-dry-run.yml  xinxin-v2.1-on-release-gate.yml  xinxin-v2.1-pr-dry-run.yml  xinxin-v2.1-release-check.yml  xinxin-v2.1-release-gate.yml  xinxin-v2.1-release-line.yml
apps/desktop/: package.json  tsconfig.main.json  tsconfig.renderer.json  vite.config.ts
companion/: .gitignore  README.md  pyproject.toml
companion/backend/: __init__.py  base.py  cli.py  distilled.py  feishu.py  registry.py
companion/distiller/: SKILL.md
companion/distiller/prompts/: merger.md  persona_builder.md
companion/distiller/tools/: feishu_parser.py
scripts/: README.md  audit-xinxin-v2.1.ps1  build-xinxin-delivery-manifest.ps1  build-xinxin-recovery-board.ps1  check-v2.1-release-gate.ps1  collect-pet-run-status.ps1  collect-xinxin-next-artifacts.ps1  execute-xinxin-recovery-cycle.ps1  generate-pipeline-manifest.ps1  generate-v2.1-run-log.ps1  infer-xinxin-remediation-plan.ps1  resolve-xinxin-next-action.ps1  run-pet-workflow.ps1  run-xinxin-release-command-center.ps1  run-xinxin-v2.1-release-line.ps1  run-xinxin-v2.1.ps1  set-v2.1-manual-review.ps1  summarize-xinxin-recovery.ps1
xinxin-run/: imagegen-jobs.json  pet_request.json  xinxin-warm-lines.zh-CN.json
xinxin-run/final/: validation.json
xinxin-run/frames/: frames-manifest.json
xinxin-run/prompts/: base-pet.md  xinxin-ip-contract.md
xinxin-run/qa/: delivery-manifest.json  review.json  run-log-template.md  (+21 more)
(+24 files in other folders)
