[project]
name = "pet-companion"
version = "0.1.0"
description = "Desktop companion: switchable backends between distilled AI persona and Feishu bot relay"
requires-python = ">=3.10"
dependencies = [
  "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
packages = ["companion", "companion.backend"]
